=== 2016-12-23
* Enhancement
  * Added #execute_script method to Druid
  * Added support for finding the following using :css
      Button
      Link
  * Added method to fetch generic element
  * Support alias method 'on' for 'on_page', 'visit' for 'visit_page' on PageFactory
  * Changed Elements.element_class_for so parameters can be strings or symbols
=== 2016-12-20
* Fixes
  WARNING: This change breaks existing code
  * Changed the generated getter for select_list to return the text instead of the value
* Enhancements
  * Added #expected_title method to Druid
  * Added #expected_element method to Druid
=== Version 1.1.2 /2016-12-19
* Enhancements
  * Added #include? and #selected? to SelectList
  * Added #append to TextField
  * Added #wait_for_ajax support for the jQuery framework
  * Added #wait_for_ajax support for the Prototype framework
  * Added the ability to add new Javascript Frameworks to Druid via the #add_framework method
* Fixes
  * Fixed [] methods on OrderedList and UnOrderedList so it only gets direct children
  * Fixed items methods on OrderedList and UnOrderedList so it returns count of direct children
=== 2016-12-14
* Enhancements
  * Added shortcut method to check element exists
  * Added #disabled? method to Element
  * Added #selected_options method to SelectList
=== Version 1.1.1 / 2016-12-13
* Enhancements
  * Added ?_elements to ElementLocators so you can find all elements that match an identifier
  * Added ?_elements to NestedElements so you can find all elements nested within others

=== 2016-11-15
* Enhancements
  * Added #navigate_to method to PageFactory to navigate to a page through previous pages
  * Added routes to PageFactory to collect routes through the site
  * Added #continue_navigation_to method to PageFactory which begins at @current_page
******1.1.0******
=== 2016-11-14
* Enhancements
  * Added ability to find a parent of an Element
  * Added #focus method to Element
=== 2016-08-05
* Enhancements